Update to homepage icons and fonts

--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                                <a href="mailto:gerwyn@pro-plumb.co.uk" class="btn btn-default btn-lg"><i class="fa fa-envelope-o"></i> <span class="network-name">Email</span></a>
                             </li>
                             <li>
-                                <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                                <a href="tel:07971 523112" class="btn btn-default btn-lg"><i class="fa fa-phone-square"></i> <span class="network-name">Call Us</span></a>
                             </li>
                             <li>
-                                <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                                <a href="http://twitter.com/proplumbltd" class="btn btn-default btn-lg"><i class="fa fa-twitter"></i> <span class="network-name">Tweet Us</span></a>
                             </li>
                         </ul>
                     </div>
@@ -112,11 +112,11 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                    <h2 class="section-heading">Service, Install and Repair</h2>
+                    <p class="lead">In addition to the fact we are service agents for <b>FERROLI</b> and <b>BIASI</b> we also service, install and repair for all the major manufactures including <b>WORCESTER</b>, <b>RAVENHEAT</b>, <b>ARISTON</b>, <b>VAILLANT</b>, <b>GLOWWORM</b>, <b>BAXI</b>, <b>IDEAL</b>, <b>HALSTEAD</b>, <b>VOKERA</b>, <b>SAUNIER</b> <b>DUVAL</b> <b>HEATLINE</b> and many more.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                    <img class="img-responsive" src="img/suppliers.jpg" alt="Pro-Plumb Registered">
                 </div>
             </div>
 
@@ -177,19 +177,20 @@
 
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>Connect to Start Bootstrap:</h2>
+                    <h2>Let us help you today:</h2>
                 </div>
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                        </li>
+                        <ul class="list-inline intro-social-buttons">
+                            <li>
+                                <a href="mailto:gerwyn@pro-plumb.co.uk" class="btn btn-default btn-lg"><i class="fa fa-envelope-o"></i> <span class="network-name">Email</span></a>
+                            </li>
+                            <li>
+                                <a href="tel:07971 523112" class="btn btn-default btn-lg"><i class="fa fa-phone-square"></i> <span class="network-name">Call Us</span></a>
+                            </li>
+                            <li>
+                                <a href="http://twitter.com/proplumbltd" class="btn btn-default btn-lg"><i class="fa fa-twitter"></i> <span class="network-name">Tweet Us</span></a>
+                            </li>
                     </ul>
                 </div>
             </div>
