--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h2>Pro-Plumb are the main service agents for FERROLI Boilers and BIASI boilers in the South Wales area.
-                            Established 1990 and with over 25 years experience in the gas heating and plumbing industry we are in a very strong position to help you with all your heating requirements.</h2>
+                            Established 1990 and with over 25 years experience in the gas heating and plumbing industry we are in a very strong position to help you with all of your heating requirements.</h2>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
