added thris image section

--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
+                    <h2 class="section-heading">The best is the cheapest </br>in the long run</h2>
+                    <p class="lead">We are a well respected company with a professional approach to everything we do. That’s why we come <b>highly recommended by our customers (see our testimonials)</b> who come back to us year after year because we offer a first class service that is second to none..</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
+                    <img class="img-responsive" src="img/gerwynandvan.jpg" alt="">
                 </div>
             </div>
 
@@ -224,7 +224,7 @@
                             <a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright &copy; Pro-Plumb Gas Limited 2015. All Rights Reserved</p>
                 </div>
             </div>
         </div>
