--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
+                    <!--<li class="break-contact">-->
+                        <!--<ul class="nav navbar-nav navbar-right navbar-contact">-->
+                            <!--<li>-->
+                                <!--<a href="mailto:gerwyn@pro-plumb.co.uk" class="contact-email-nav"><i class="fa fa-envelope-o"></i> <span class="network-name">gerwyn@pro-plumb.co.uk</span></a>-->
+                            <!--</li>-->
+                            <!--<li>-->
+                                <!--<a href="tel:07971 523112" class="contact-phone-nav"><i class="fa fa-phone-square"></i> <span class="network-name">07971 523112</span></a>-->
+                            <!--</li>-->
+                        <!--</ul>-->
+                    <!--</li>-->
                     <li>
                         <a href="#about">Home</a>
                     </li>
@@ -62,7 +72,9 @@
                     <li>
                         <a href="#contact">Contact</a>
                     </li>
+
                 </ul>
+
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -78,20 +90,23 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
+                        <ul class="list-inline intro-social-buttons">
+                            <li>
+                                <a href="mailto:gerwyn@pro-plumb.co.uk" class="btn btn-default btn-lg"><i class="fa fa-envelope-o"></i> <span class="network-name">Email<br/>gerwyn@pro-plumb.co.uk</span></a>
+                            </li>
+                            <li>
+                                <a href="tel:07971 523112" class="btn btn-default btn-lg"><i class="fa fa-phone-square"></i> <span class="network-name">Call Us<br/>07971 523112</span></a>
+                            </li>
+                            <li>
+                                <a href="http://twitter.com/proplumbltd" class="btn btn-default btn-lg"><i class="fa fa-twitter"></i> <span class="network-name">Tweet Us<br/>@proplumblimited</span></a>
+                            </li>
+                        </ul>
+                        <hr class="intro-divider">
+
                         <h2>Pro-Plumb are the main service agents for FERROLI Boilers and BIASI boilers in the South Wales area.
                             Established 1990 and with over 25 years experience in the gas heating and plumbing industry we are in a very strong position to help you with all of your heating requirements.</h2>
                         <hr class="intro-divider">
-                        <ul class="list-inline intro-social-buttons">
-                            <li>
-                                <a href="mailto:gerwyn@pro-plumb.co.uk" class="btn btn-default btn-lg"><i class="fa fa-envelope-o"></i> <span class="network-name">Email</span></a>
-                            </li>
-                            <li>
-                                <a href="tel:07971 523112" class="btn btn-default btn-lg"><i class="fa fa-phone-square"></i> <span class="network-name">Call Us</span></a>
-                            </li>
-                            <li>
-                                <a href="http://twitter.com/proplumbltd" class="btn btn-default btn-lg"><i class="fa fa-twitter"></i> <span class="network-name">Tweet Us</span></a>
-                            </li>
-                        </ul>
+
                     </div>
                 </div>
             </div>
