--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <p class="lead">We are a well respected company with a professional approach to everything we do. That’s why we come <b>highly recommended by our customers (see our testimonials)</b> who come back to us year after year because we offer a first class service that is second to none..</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/gerwynandvan.jpg" alt="">
+                    <img class="img-responsive" src="img/gerwynvan.jpg" alt="">
                 </div>
             </div>
 
